# RunePortal

./: .gitignore  Cargo.toml  README.md  dfx.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.dfx/local/: network-id
canisters/backend/: Cargo.toml  backend.did
canisters/backend/src/: addresses.rs  lib.rs  memory.rs  state.rs  token_type.rs  txn_handler.rs  updater.rs
canisters/backend/src/chain/: btc.rs
canisters/backend/src/chain/btc/: runestone.rs  transaction.rs  utils.rs
canisters/backend/src/chain/btc/runestone/: etch.rs  inscription.rs  transfer.rs
canisters/backend/src/chain/btc/runestone/inscription/: tag.rs
canisters/backend/src/chain/btc/signer/: ecdsa.rs  schnorr.rs
canisters/backend/src/state/: config.rs  launch_manager.rs  queue.rs  user_manager.rs  utxo_manager.rs
canisters/ord_canister/: Cargo.toml
canisters/ord_canister/src/: canister.rs  index.rs
docker/: etch.yaml
ic_siwb/: ic_siwb_provider.d.ts  ic_siwb_provider.idl.ts  ic_siwb_provider.wasm
src/: App.tsx  index.css  main.tsx
src/components/: ConnectDialog.tsx  LaunchWizard.tsx  Navbar.tsx
src/components/wizard-steps/: BasicInfo.tsx  LaunchParameters.tsx  ProjectDetails.tsx  Review.tsx
src/contexts/: IdentityContext.tsx
src/declarations/backend/: backend.did.d.ts  backend.did.js
src/routes/: Home.tsx  Launch.tsx
src/styles/: ConnectDialog.css  Home.css  Launch.css  LaunchWizard.css  Navbar.css
